[tool.poetry]
name = "python_api"
version = "0.1.0"
description = ""
authors = ["Chivorix <junjul47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
requests = "^2.32.3"
pydantic = "^2.7.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
